# marp-video

./: .gitignore  Cargo.toml  README.md
.github/workflows/: actionlint.yml  ci.yml  review.yml
src/: asset_preparator.rs  event.rs  event_parser.rs  main.rs  planner.rs
src/application/: ffmpeg.rs  ffprobe.rs  marp.rs  mod.rs  tts.rs
src/environment/: config.rs  mod.rs
