[package]
name = "marp-video"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
clap = { version = "4.5.23", features = ["derive", "env"] }
directories = "6.0.0"
futures = "0.3.31"
glob = "0.3.1"
itertools = "0.14.0"
markdown = "1.0.0-alpha.21"
md5 = "0.8.0"
serde = { version = "1.0.215", features = ["derive"] }
serde-env-field = "0.3.2"
serde_toml = "0.0.1"
serde_yaml = "0.9.34+deprecated"
thiserror = "2.0.6"
tokio = { version = "1.42.0", features = ["rt", "macros", "process"] }
toml = "0.9.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
